<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Course1.c1p3">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/c1p3title"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="356dp"
            android:layout_height="580dp"
            android:layout_gravity="center"
            android:text="@string/c1p3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/ic_media_play"
                    android:rotation="180"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>