<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Course1.page1">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:text="@string/c1p1"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="355dp"
            android:layout_height="342dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:src="@drawable/ai" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/ic_media_play"
                    android:rotation="180"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/ic_media_play"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>